tests/baselines/reference/parserBreakStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserBreakStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserBreakStatement1.d.ts(1,1): error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserBreakStatement1.d.ts (2 errors) ====
    break;
    ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    ~~~~~~
!!! error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.